--- a/package.json
+++ b/package.json
@@ -4,12 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install:hljs": "cd submodules/highlight.js && npm ci",
+    "build:hljs": "cd submodules/highlight.js && node ./tools/build.js -t browser",
+    "copy:marked": "cpx -u node_modules/marked/marked.min.js build/script/browser/contents/MarkdownEX/",
+    "copy:github-markdown-css": "cpx -u node_modules/github-markdown-css/github-markdown.css build/script/browser/contents/MarkdownEX/css/markdown/",
+    "copy:hljs": "cpx -u submodules/highlight.js/build/highlight.min.js build/script/browser/contents/MarkdownEX/",
+    "copy:hljs-styles": "cpx -u submodules/highlight.js/build/demo/styles/* build/script/browser/contents/MarkdownEX/css/hljs/",
+    "copy:lib": "run-s copy:{marked,github-markdown-css,hljs,hljs-styles}",
+    "copy:src": "cpx -u script/**/* build/script/",
+    "clean": "rimraf build"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "github-markdown-css": "^4.0.0",
     "marked": "^2.0.5"
+  },
+  "devDependencies": {
+    "cpx": "^1.5.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2"
   }
 }
