--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "github-markdown-css": "^4.0.0",
-    "marked": "^2.0.5"
+    "marked": "^2.0.5",
+    "mathjax": "^3.1.4"
   },
   "devDependencies": {
     "cpx": "^1.5.0",
