--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "copy:lib": "run-s copy:{marked,hljs,hljs-styles,mathjax}",
     "copy:assets": "cpx -u assets/twemoji/assets/svg/* build/script/browser/contents/MarkdownEX/img/default/",
     "copy:src": "cpx -u script/**/* build/script/",
-    "generate:emojis": "node ./tools/generate_emoji_list.js script/browser/contents/MarkdownEX/img/default/setting.json",
+    "generate:emojis": "node ./tools/generate_emoji_list.js",
     "clean": "rimraf build"
   },
   "author": "",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "cpx": "^1.5.0",
+    "ejs": "^3.1.6",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   }
