--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "copy:github-markdown-css": "cpx -u node_modules/github-markdown-css/github-markdown.css build/script/browser/contents/MarkdownEX/css/markdown/",
     "copy:hljs": "cpx -u submodules/highlight.js/build/highlight.min.js build/script/browser/contents/MarkdownEX/",
     "copy:hljs-styles": "cpx -u submodules/highlight.js/build/demo/styles/* build/script/browser/contents/MarkdownEX/css/hljs/",
-    "copy:mathjax": "cpx -u node_modules/mathjax/es5/**/* build/script/browser/contents/MarkdownEX/mathjax/",
+    "copy:mathjax": "cpx -u node_modules/mathjax/es5/tex-chtml-full.js build/script/browser/contents/MarkdownEX/mathjax/ && cpx -u node_modules/mathjax/es5/output/chtml/**/* build/script/browser/contents/MarkdownEX/mathjax/output/chtml/",
     "copy:lib": "run-s copy:{marked,hljs,hljs-styles,mathjax}",
     "copy:assets": "cpx -u assets/twemoji/assets/svg/* build/script/browser/contents/MarkdownEX/img/default/",
     "copy:exa": "cpx -u testdata/*.exa build/script/browser/",
